Add support for running tests with gcc

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,18 @@
 project('libasync', 'cpp')
 
-cxxshim_coroutine_dep = subproject('cxxshim').get_variable('clang_coroutine_dep')
+cpp_args = []
+coro_dep_name = ''
+if meson.get_compiler('cpp').has_argument('-fcoroutines')
+	cpp_args += ['-fcoroutines']
+	coro_dep_name = 'std_coroutine_dep'
+elif meson.get_compiler('cpp').has_argument('-fcoroutines-ts')
+	cpp_args = ['-fcoroutines-ts', '-DLIBASYNC_FORCE_USE_EXPERIMENTAL']
+	coro_dep_name = 'clang_coroutine_dep'
+else
+	error('unsupported compiler')
+endif
+
+cxxshim_coroutine_dep = subproject('cxxshim').get_variable(coro_dep_name)
 frigg_dep = subproject('frigg').get_variable('frigg_dep')
 gtest_dep = dependency('gtest', main: true, required: false)
 
@@ -10,7 +22,7 @@ gtest_binary = executable('gtests',
 	'tests/mutex.cpp',
 	'tests/race.cpp',
 	include_directories: include_directories('include/'),
-	cpp_args: '-fcoroutines-ts',
+	cpp_args: cpp_args,
 	dependencies: [
 		cxxshim_coroutine_dep,
 		frigg_dep,
