docs: add documentation for existing functionality

--- a/meson.build
+++ b/meson.build
@@ -30,6 +30,7 @@ endif
 if get_option('enable_docs')
 	hotdoc = import('hotdoc')
 	docs = hotdoc.generate_doc('libasync',
+		project_name : 'libasync',
 		project_version : '0',
 		sitemap : 'docs/sitemap',
 		index : 'docs/src/index.md',
