--- a/tests/meson.build
+++ b/tests/meson.build
@@ -4,8 +4,8 @@ deps = [ libasync_dep ]
 if meson.get_compiler('cpp').has_argument('-fcoroutines')
 	cpp_args += '-fcoroutines'
 elif meson.get_compiler('cpp').has_argument('-fcoroutines-ts')
-	cpp_args += [ '-fcoroutines-ts', '-DLIBASYNC_FORCE_USE_EXPERIMENTAL', '-fsized-deallocation' ]
-	deps += subproject('cxxshim').get_variable('clang_coroutine_dep')
+	cpp_args += [ '-fcoroutines-ts', '-fsized-deallocation' ]
+	deps += subproject('cxxshim').get_variable('std_coroutine_dep')
 else
 	error('Unsupported compiler')
 endif
