--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,23 +10,30 @@ jobs:
       - uses: actions/checkout@v2
       - name: Get dependencies
         run: |
+          set -e
           sudo apt-get -y install python3-dev libxml2-dev libxslt1-dev \
                                   cmake libyaml-dev libclang-dev llvm-dev \
                                   libglib2.0-dev libjson-glib-dev flex \
                                   ninja-build jq
-          pip install -U meson hotdoc
+          pip install -U meson
           wget https://raw.githubusercontent.com/WayneD/rsync/c3f7414c450faaf6a8281cc4a4403529aeb7d859/rsync-ssl
+          curl -sL https://github.com/rust-lang/mdBook/releases/download/v0.4.20/mdbook-v0.4.20-x86_64-unknown-linux-gnu.tar.gz | tar xz
+          sha512sum --check <<EOF
+          705377aed3ca618c4830ea4a5b88d6ee4d01f8246ae738dce3d395e50ceaaa6e8a518837602efccd138bb9630df91fbaa3d7be12bd3803bc12989a9836dd0ae4  mdbook
+          d035f3a97aaea278bc9229e1bd82599697b6137fb36b6338f0f6ab26eb07f123ec91369d1fbcffb3fa9fde7dc2b9f8b408dfead31063e5625cb7a48f1846a1dd  rsync-ssl
+          EOF
           sudo install -D rsync-ssl /usr/local/bin/rsync-ssl
+          sudo install -D mdbook /usr/local/bin/mdbook
       - name: Build
         run: |
-          meson -Denable_docs=true build
+          meson -Dbuild_docs=enabled build
           cd build
-          ninja build-doc
+          ninja docs/libasync-doc
       - name: Upload docs as artifacts
         uses: actions/upload-artifact@v2
         with:
           name: libasync-docs
-          path: build/libasync-doc/
+          path: build/docs/libasync-doc/
       - name: Upload docs to docs.managarm.org
         if: github.ref == 'refs/heads/master' && github.repository == 'managarm/libasync'
         env:
