--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,3 @@
 option('install_headers', type : 'boolean', value : true)
 option('build_tests', type : 'boolean', value : false)
-option('enable_docs', type : 'boolean', value : false)
+option('build_docs', type : 'feature', value : 'disabled')
