--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,10 +8,8 @@ permissions:
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
-    container:
-      # XXX(arsen): stop doing this when GCC 11 is in Ubuntu LTS
-      image: ubuntu:impish
+    # XXX(arsen): stop doing this when GHAs ubuntu-latest is 22.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
       - name: Get dependencies
