--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,14 +14,15 @@ jobs:
       - uses: actions/checkout@v2
       - name: Get dependencies
         run: |
-          export DEBIAN_FRONTEND=noninteractive
-          apt-get update
-          apt-get -y install python3-dev libxml2-dev libxslt1-dev \
+          export 
+          sudo DEBIAN_FRONTEND=noninteractive apt-get update
+          sudo DEBIAN_FRONTEND=noninteractive \
+              apt-get -y install python3-dev libxml2-dev libxslt1-dev \
                              cmake libyaml-dev libclang-dev llvm-dev \
                              libglib2.0-dev libjson-glib-dev flex \
                              ninja-build build-essential python3-pip \
                              git libgtest-dev
-          pip3 install -U meson hotdoc gcovr
+          sudo pip3 install -U meson hotdoc gcovr
       - name: Build
         run: |
           git clone --depth=1 https://github.com/managarm/frigg.git subprojects/frigg
