algorithm: Add `lambda` helper function

--- a/docs/meson.build
+++ b/docs/meson.build
@@ -19,6 +19,7 @@ custom_target('build-doc',
 		'src/headers/algorithm/sequence.md',
 		'src/headers/algorithm/transform.md',
 		'src/headers/algorithm/when_all.md',
+		'src/headers/algorithm/lambda.md',
 		'src/headers/basic.md',
 		'src/headers/basic/any_receiver.md',
 		'src/headers/basic/detached.md',
