cancellation: Add with_cancel_cb() sender adapter

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -21,7 +21,8 @@ sources = files(
 	'oneshot.cpp',
 	'promise.cpp',
 	'sequenced.cpp',
-	'post-ack.cpp'
+	'post-ack.cpp',
+	'with_cancel_cb.cpp',
 )
 
 exe = executable('gtests',
